--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jpal</title>
+  <title>JAKE PALESCHIC</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="description" content="JAKE PALESCHIC. Music, video, and upcoming shows.">
+  <meta name="author" content="Collin Sansom">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
