--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,30 @@
 <body id="background">
-	<div id="jakescript" class="container"><!-- /JAKE SCRIPT -->
-		<img src="<%= asset_path('jakescript.png')%>" alt="JAKE PALESCHIC" style="width: 100%; height: 100%;">
+	<div id="jakescript" class="container text-center"><!-- /JAKE SCRIPT -->
+		<img src="<%= asset_path('jakescript.png')%>" alt="JAKE PALESCHIC" style="width: 90%; height: 90%;">
 	</div><!-- /#jakescript -->
 
 	<div id="social" class="container text-center"><!-- /SOCIAL -->
-		<p>twitter / facebook / instagram / bandcamp / contact</p>
+		<p><a href="http://twitter.com/jpaleschic" target="_blank" alt="Twitter">twitter</a> / <a href="https://www.facebook.com/fwpatriot" target="_blank" alt="Facebook">facebook</a> / <a href="http://instagram.com/jpaleschic" target="_blank" alt="Instagram">instagram</a> / <a href="https://jpaleschic.bandcamp.com/" target="_blank" alt="Bandcamp">bandcamp</a> / <a href="mailto:alan@pleaseandthankyoubooking.com">contact</a></p>
 	</div><!-- /#social -->
+	
+	<div class="container text-center"><!-- /MAIN -->
+		<div class="row">
+			<div class="col-md-5">
+					<div class="box">
+						<div class="video-responsive">
+							<iframe width="500" height="281" src="https://www.youtube.com/embed/Uu21COGXipo" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
+					<div class="box">
+						<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3785606564/size=small/bgcol=333333/linkcol=ffffff/artwork=none/transparent=true/" seamless><a href="http://jpaleschic.bandcamp.com/album/again-at-last">Again, At Last by Jake Paleschic</a></iframe>
+					</div>
+			</div><!-- /.col-sm-5 -->
+			<div class="col-md-7">
+					<a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
+					<script src="//widget.songkick.com/widget.js"></script>
+			</div><!-- /.col-sm-7 -->
+		</div><!-- /.row -->
+	</div><!-- /#main -->
 
 	<div id="about" class="container text-center"><!-- /ABOUT -->
 		<div id="img" class="jpal">
@@ -15,4 +34,8 @@
 			<p>"This is music firmly rooted in American soil, even while collectively the band explores newer frontiers of folk, rock and roll, and country"</p>
 		</div>
 	</div><!-- /#about -->
+
+<!-- FOOTER -->
+	<footer class="text-center"><p><small>© 2015 JAKE PALESCHIC</small></p></footer>
+
 </body>
