favicon, dates font, & google analytics

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,8 @@
 					</div>
 			</div><!-- /.col-sm-5 -->
 			<div class="col-md-7">
-					<a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
-					<script src="//widget.songkick.com/widget.js"></script>
+					<p><a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
+					<script src="//widget.songkick.com/widget.js"></script></p>
 			</div><!-- /.col-sm-7 -->
 		</div><!-- /.row -->
 	</div><!-- /#main -->
