fixed margin issue in about

--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -55,10 +55,12 @@ a:hover {
 }
 
 .jpal {
-	margin-right: 35px;
+	padding-left: 35px;
+	padding-right: 35px;
 }
 
 .blurb {
+	padding-top: 10px;
 	max-width: 450px;
 }
 
