--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -68,6 +68,11 @@ a:hover {
 	display: inline-block;
 }
 
+#shows {
+	overflow-y: scroll;
+	height: 320px;
+}
+
 .video-responsive {
 	overflow: hidden;
 	padding-bottom: 56.25%;
