--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,16 @@
 <body id="background">
-	<div id="jakescript" class="container text-center"><!-- /JAKE SCRIPT -->
+	<!-- /JAKE SCRIPT -->
+	<div id="jakescript" class="container text-center">
 		<img src="<%= asset_path('jakescript.png')%>" alt="JAKE PALESCHIC" style="width: 90%; height: 90%;">
 	</div><!-- /#jakescript -->
 
-	<div id="social" class="container text-center"><!-- /SOCIAL -->
+	<!-- /SOCIAL -->
+	<div id="social" class="container text-center">
 		<p><a href="http://twitter.com/jpaleschic" target="_blank" alt="Twitter">twitter</a> / <a href="https://www.facebook.com/fwpatriot" target="_blank" alt="Facebook">facebook</a> / <a href="http://instagram.com/jpaleschic" target="_blank" alt="Instagram">instagram</a> / <a href="https://jpaleschic.bandcamp.com/" target="_blank" alt="Bandcamp">bandcamp</a> / <a href="mailto:alan@pleaseandthankyoubooking.com">contact</a></p>
 	</div><!-- /#social -->
 	
-	<div class="container text-center"><!-- /MAIN -->
+	<!-- /MAIN -->
+	<div class="container text-center">
 		<div class="row">
 			<div class="col-md-5">
 					<div class="box">
@@ -20,13 +23,16 @@
 					</div>
 			</div><!-- /.col-sm-5 -->
 			<div class="col-md-7">
-					<p><a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
-					<script src="//widget.songkick.com/widget.js"></script></p>
+					<div id="shows" class="box">
+						<p><a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
+						<script src="//widget.songkick.com/widget.js"></script></p>
+					</div><!-- /#shows -->
 			</div><!-- /.col-sm-7 -->
 		</div><!-- /.row -->
 	</div><!-- /#main -->
 
-	<div id="about" class="container text-center"><!-- /ABOUT -->
+	<!-- /ABOUT -->
+	<div id="about" class="container text-center">
 		<div id="img" class="jpal">
 			<img class="img-circle" src="<%= asset_path('jpalavatar.jpg')%>" alt="Jake Paleschic" style="width: 100px; height: 100px;">
 		</div>
