webkit overflow scrolling

--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -70,7 +70,8 @@ a:hover {
 
 #shows {
 	overflow-y: scroll;
-	height: 320px;
+	-webkit-overflow-scrolling: touch;
+	height: 315px;
 }
 
 .video-responsive {
