--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,6 +42,6 @@
 	</div><!-- /#about -->
 
 <!-- FOOTER -->
-	<footer class="text-center"><p><small>© 2015 JAKE PALESCHIC</small></p></footer>
+	<footer class="text-center"><p><small>© 2015 Jake Paleschic</small></p></footer>
 
 </body>
