--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 
 	<!-- /SOCIAL -->
 	<div id="social" class="container text-center">
-		<p><a href="http://twitter.com/jpaleschic" target="_blank" alt="Twitter">twitter</a> / <a href="https://www.facebook.com/fwpatriot" target="_blank" alt="Facebook">facebook</a> / <a href="http://instagram.com/jpaleschic" target="_blank" alt="Instagram">instagram</a> / <a href="https://jpaleschic.bandcamp.com/" target="_blank" alt="Bandcamp">bandcamp</a> / <a href="mailto:alan@pleaseandthankyoubooking.com">contact</a></p>
+		<p class="links"><a href="http://twitter.com/jpaleschic" target="_blank" alt="Twitter">twitter</a> / <a href="https://www.facebook.com/fwpatriot" target="_blank" alt="Facebook">facebook</a> / <a href="http://instagram.com/jpaleschic" target="_blank" alt="Instagram">instagram</a> / <a href="https://jpaleschic.bandcamp.com/" target="_blank" alt="Bandcamp">bandcamp</a> / <a href="mailto:alan@pleaseandthankyoubooking.com">contact</a></p>
 	</div><!-- /#social -->
 	
 	<!-- /MAIN -->
