bug with shows box

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
 					</div>
 			</div><!-- /.col-sm-5 -->
 			<div class="col-md-7">
-					<div id="shows" class="box">
+					<div class="box">
 						<p><a href="http://www.songkick.com/artists/4104156" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">Tour Dates</a>
 						<script src="//widget.songkick.com/widget.js"></script></p>
 					</div><!-- /#shows -->
