--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,5 @@
 html {
 	overflow-y: scroll;
-	background-image: url('assets/img/background.png') no-repeat center center fixed;
-	background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	-webkit-background-size: cover;
 }
 
 body {
@@ -14,7 +9,11 @@ body {
 }
 
 body#background {
-
+	background: url('../img/background.png');
+	background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	-webkit-background-size: cover;
 }
 
 p {
